export interface PlaceConnectionDto {
  id: string;
  type: string;
  name: string;
  description: string;
  content: any;
  startId: string;
  endId: string;
  gameId: string;
}

