export interface VehicleTypeDto {
  id: string;
  type: string;
  name: string;
  description: string;
  content: any;
} 